Se agregó método para cambiar entre imágenes acorde a la selección del usuario

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -56,6 +56,7 @@
 
 
     <Button
+        android:id="@+id/btnReiniciar"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/texto_reiniciar"/>
